[package]
name = "timing-attack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = {version = "0.4", feature="html_reports"}
rand = "0.8.5"

[[bench]]
name = "timing_bench_u64"
harness = false
